--- a/kr.gimaek.comfybed/comfybed/comfybed.Android/comfybed.Android.csproj
+++ b/kr.gimaek.comfybed/comfybed/comfybed.Android/comfybed.Android.csproj
@@ -60,6 +60,9 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="4.7.0.1080" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
+    <PackageReference Include="XamarinForms.CardView">
+      <Version>1.1.1.5</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
