--- a/kr.gimaek.comfybed/comfybed/comfybed.Android/comfybed.Android.csproj
+++ b/kr.gimaek.comfybed/comfybed/comfybed.Android/comfybed.Android.csproj
@@ -16,6 +16,7 @@
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
     <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
     <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
+    <AndroidUseLatestPlatformSdk>false</AndroidUseLatestPlatformSdk>
     <TargetFrameworkVersion>v9.0</TargetFrameworkVersion>
     <AndroidEnableSGenConcurrent>true</AndroidEnableSGenConcurrent>
     <AndroidUseAapt2>true</AndroidUseAapt2>
@@ -32,6 +33,10 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AndroidLinkMode>None</AndroidLinkMode>
+    <AotAssemblies>false</AotAssemblies>
+    <EnableLLVM>false</EnableLLVM>
+    <AndroidEnableProfiledAot>false</AndroidEnableProfiledAot>
+    <BundleAssemblies>false</BundleAssemblies>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -92,7 +97,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\comfybed\comfybed.csproj">
-      <Project>{877B036E-7017-4259-805A-B67EB1C1BFA6}</Project>
+      <Project>{1931EB8D-5508-4374-B0DA-D21083C5543D}</Project>
       <Name>comfybed</Name>
     </ProjectReference>
   </ItemGroup>
