--- a/kr.gimaek.comfybed/comfybed/comfybed/comfybed.csproj
+++ b/kr.gimaek.comfybed/comfybed/comfybed/comfybed.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="common\Shop_Info.cs" />
     <Compile Remove="tools\etc\Class1.cs" />
     <Compile Remove="view\Employee.cs" />
   </ItemGroup>
@@ -28,12 +29,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="models\" />
-    <Folder Include="view\Shop\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <EmbeddedResource Update="view\HomeFrm.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="view\Shop\Shop_DetailFrm.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="view\user\LoginFrm.xaml">
