--- a/kr.gimaek.comfybed/comfybed/comfybed/comfybed.csproj
+++ b/kr.gimaek.comfybed/comfybed/comfybed/comfybed.csproj
@@ -18,11 +18,18 @@
 
   <ItemGroup>
     <Compile Remove="common\Shop_Info.cs" />
+    <Compile Remove="models\Shop_Test.cs" />
     <Compile Remove="tools\etc\Class1.cs" />
     <Compile Remove="view\Employee.cs" />
+    <Compile Remove="view\Shop\Shop_test.xaml.cs" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Remove="view\Shop\Shop_test.xaml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MySql.Data" Version="8.0.21" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Xamarin.Forms" Version="4.7.0.1080" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
@@ -32,16 +39,19 @@
     <EmbeddedResource Update="view\HomeFrm.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="view\Shop\ReviewFrm.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="view\Shop\Shop_DetailFrm.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="view\user\LoginFrm.xaml">
+    <EmbeddedResource Update="view\Shop\user\LoginFrm.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="view\user\MyInfoFrm.xaml">
+    <EmbeddedResource Update="view\Shop\user\MyInfoFrm.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="view\user\UserJoinFrm.xaml">
+    <EmbeddedResource Update="view\Shop\user\UserJoinFrm.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
